--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -297,7 +297,9 @@
       "hours":"hours",
       "Total amount of time for closed positions":"Total amount of time for closed positions",
       "Get started today!":"Get started today!",
-      "Improve the services provided by your company":"Improve the services provided by your company"
+      "Effectively manage tasks and location":"Effectively manage tasks and location",
+      "Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.":"Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality."
+      
 
 
       
