--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -297,7 +297,8 @@
       "hours":"godziny",
       "Total amount of time for closed positions":"Całkowita suma czasu dla zamkniętych pozycji",
       "Get started today!":"Rozpocznij",
-      "Improve the services provided by your company":"Usprawniaj usługi oferowane przez swoją firmę."
+      "Effectively manage tasks and location":"Efektywne zarządzaj zadaniami i lokalizacją",
+      "Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.":"Aplikacja ułatwia rejestrowanie zadań, oferując prostą rejestrację, precyzyjną lokalizację i weryfikację pracy, podnosząc jakość usług."
 
 
 
