--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -298,7 +298,9 @@
       "Total amount of time for closed positions":"Całkowita suma czasu dla zamkniętych pozycji",
       "Get started today!":"Rozpocznij",
       "Effectively manage tasks and location":"Efektywne zarządzaj zadaniami i lokalizacją",
-      "Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.":"Aplikacja ułatwia rejestrowanie zadań, oferując prostą rejestrację, precyzyjną lokalizację i weryfikację pracy, podnosząc jakość usług."
+      "Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.":"Aplikacja ułatwia rejestrowanie zadań, oferując prostą rejestrację, precyzyjną lokalizację i weryfikację pracy, podnosząc jakość usług.",
+      "Save":"Zapisz",
+      "Edit":"Edytuj"
 
 
 
