changed some changes in our website

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -170,7 +170,7 @@
       "Profile type":"Typ profilu",
       "Phone number":"Numer telefonu",
       "Open tasks":"Otwarte zadania",
-      "Have questions or suggestions about our software? Contact the Task Venue team in any convenient way.":"Masz pytania lub sugestie dotyczące  naszego oprogramowania? Skontaktuj się z zespołem Task Venue w dowolny dogodny sposób.",
+      "Have questions or suggestions about our software? Contact the Task Venue team in any convenient way.":"Masz pytania lub sugestie dotyczące  naszego oprogramowania? Skontaktuj się z zespołem Task Venue w dowolny sposób.",
       "Read more on the official website":"Czytaj więcej na oficjalnej stronie",
       "Copyright © 2023 Task Venue - all rights reserved.":"Copyright © 2023 Task Venue - wszystkie prawa zastrzeżone",
       "About us":"O nas",
