added new contractor view

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -300,7 +300,8 @@
       "Effectively manage tasks and location":"Effectively manage tasks and location",
       "Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.":"Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.",
       "Save":"Save",
-      "Edit":"Edit"
+      "Edit":"Edit",
+      "Inactive":"Inactive"
       
 
 
