added archived in contractorDetails

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -146,7 +146,7 @@
       "End Date":"Data do",
       "Start Date":"Data od",
       "Active":"Aktywny",
-      "Archived":"Zarchiwizowane",
+      "Archived":"Archiwalne",
       "Yes":"Tak",
       "No":"Nie",
       "Cancelled":"Anulowane",
