fixed name of report

--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -108,7 +108,7 @@
   "Sick leave": "Krankenurlaub",
   "Legend": "Legende",
   "Task type": "Aufgabentyp",
-  "Status of the implementation of issues in the last 30 days": "Status der Umsetzung von Aufgaben in den letzten 30 Tagen",
+  "Status of the implementation of issues": "Status der Umsetzung von Aufgaben",
   "Open Filter": "Filter öffnen",
   "Filter Venues": "Veranstaltungsorte filtern",
   "Filter Tasks": "Aufgaben filtern",
