--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -108,12 +108,12 @@
     "Sick leave":"Choroba",
     "Legend":"Legenda",
     "Task type":"Rodzaje zadań",
-    "Status of the implementation of issues in the last 30 days":"Status realizacji zadań z ostatnich 30 dni",
+    "Status of the implementation of issues":"Status realizacji zadań",
     "Open Filter":"Filtry",
     "Filter Venues":"Filtry miejsc",
     "Filter Tasks":"Filtry zadań",
     "Apply Filters":"Zastosuj filtry",
-    "Your open and in progress tasks":"Twoje zadania w statusach : otwarte, w trakcie realizacji",
+    "Your open and in progress tasks":"Twoje aktualne zadania",
     "License expired":"Licencja wygasła",
     "Back to home page":"Powrót do strony głównej",
     "Select User":"Wybierz użytkownika ",
@@ -137,7 +137,7 @@
       "Incorrect dates":"Niepoprawne daty",
       "Date from : ":"Data od : ",
       "Date to : ":"Data do : ",
-      "Report realization of issues for the customers [only completed]":"Raportowanie realizacji zadań dla klientów [tylko zakończone]",
+      "Report realization of issues for the customers [only completed]":"Raport zrealizowanych zadań",
       "Amount of tasks":"Ilość zadań",
       "Language":"Język",
       "Search by User":"Wyszukaj pracownika",
