--- a/taskvenue/src/Languages/ua.json
+++ b/taskvenue/src/Languages/ua.json
@@ -108,7 +108,7 @@
     "Sick leave": "Лікарняний лист",
     "Legend": "Легенда",
     "Task type": "Тип завдання",
-    "Status of the implementation of issues in the last 30 days": "Стан виконання завдань за останні 30 днів",
+    "Status of the implementation of issues": "Стан виконання завдань",
     "Open Filter": "Відкрити фільтр",
     "Filter Venues": "Фільтр місць",
     "Filter Tasks": "Фільтр завдань",
