--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -108,7 +108,7 @@
     "Sick leave":"Sick leave",
     "Legend":"Legend",
     "Task type":"Task type",
-    "Status of the implementation of issues in the last 30 days":"Status of the implementation of issues in the last 30 days",
+    "Status of the implementation of issues":"Status of the implementation of issues",
     "Open Filter":"Open Filter",
     "Filter Venues":"Filter Venues",
     "Filter Tasks":"Filter Tasks",
