added button free consultation

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -301,7 +301,8 @@
       "Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.":"Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.",
       "Save":"Save",
       "Edit":"Edit",
-      "Inactive":"Inactive"
+      "Inactive":"Inactive",
+      "Free consultation":"Free consultation"
       
 
 
