--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -301,7 +301,8 @@
       "Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.":"Aplikacja ułatwia rejestrowanie zadań, oferując prostą rejestrację, precyzyjną lokalizację i weryfikację pracy, podnosząc jakość usług.",
       "Save":"Zapisz",
       "Edit":"Edytuj",
-      "Inactive":"Nieaktywni"
+      "Inactive":"Nieaktywni",
+      "Free consultation":"Bezpłatna konsultacja"
 
 
 
