added contact form

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -302,7 +302,11 @@
       "Save":"Save",
       "Edit":"Edit",
       "Inactive":"Inactive",
-      "Free consultation":"Free consultation"
+      "Free consultation":"Free consultation",
+      "Sent":"Sent",
+      "Content of the message":"Content of the message",
+      "Phone":"Phone",
+      "Direct contact":"Direct contact"
       
 
 
