--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -302,7 +302,11 @@
       "Save":"Zapisz",
       "Edit":"Edytuj",
       "Inactive":"Nieaktywni",
-      "Free consultation":"Bezpłatna konsultacja"
+      "Free consultation":"Bezpłatna konsultacja",
+      "Sent":"Wysłano",
+      "Content of the message":"Treść wiadomości",
+      "Phone":"Telefon",
+      "Direct contact":"Bezpośredni kontakt"
 
 
 
