fixed header info

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -298,7 +298,6 @@
       "Total amount of time for closed positions":"Total amount of time for closed positions",
       "Get started today!":"Get started today!",
       "Effectively manage tasks and location":"Effectively manage tasks and location",
-      "Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.":"Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.",
       "Save":"Save",
       "Edit":"Edit",
       "Inactive":"Inactive",
@@ -306,7 +305,8 @@
       "Sent":"Sent",
       "Content of the message":"Content of the message",
       "Phone":"Phone",
-      "Direct contact":"Direct contact"
+      "Direct contact":"Direct contact",
+      "A tool for your company to work effectively in the field!":"A tool for your company to work effectively in the field!"
       
 
 
