--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -298,7 +298,6 @@
       "Total amount of time for closed positions":"Całkowita suma czasu dla zamkniętych pozycji",
       "Get started today!":"Rozpocznij",
       "Effectively manage tasks and location":"Efektywne zarządzaj zadaniami i lokalizacją",
-      "Our app makes it easy to log jobs, offering simple registration, precise location and verification of work, improving service quality.":"Aplikacja ułatwia rejestrowanie zadań, oferując prostą rejestrację, precyzyjną lokalizację i weryfikację pracy, podnosząc jakość usług.",
       "Save":"Zapisz",
       "Edit":"Edytuj",
       "Inactive":"Nieaktywni",
@@ -306,7 +305,8 @@
       "Sent":"Wysłano",
       "Content of the message":"Treść wiadomości",
       "Phone":"Telefon",
-      "Direct contact":"Bezpośredni kontakt"
+      "Direct contact":"Bezpośredni kontakt",
+      "A tool for your company to work effectively in the field!":"Narzędzie dla Twojej firmy do efektywnej pracy w terenie!"
 
 
 
