added contatc form in main website

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -306,7 +306,8 @@
       "Content of the message":"Treść wiadomości",
       "Phone":"Telefon",
       "Direct contact":"Bezpośredni kontakt",
-      "A tool for your company to work effectively in the field!":"Narzędzie dla Twojej firmy do efektywnej pracy w terenie!"
+      "A tool for your company to work effectively in the field!":"Narzędzie dla Twojej firmy do efektywnej pracy w terenie!",
+      "Industry":"Branża"
 
 
 
