--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -306,7 +306,8 @@
       "Content of the message":"Content of the message",
       "Phone":"Phone",
       "Direct contact":"Direct contact",
-      "A tool for your company to work effectively in the field!":"A tool for your company to work effectively in the field!"
+      "A tool for your company to work effectively in the field!":"A tool for your company to work effectively in the field!",
+      "Industry":"Industry"
       
 
 
