added some changes

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -307,7 +307,11 @@
       "Phone":"Phone",
       "Direct contact":"Direct contact",
       "A tool for your company to work effectively in the field!":"A tool for your company to work effectively in the field!",
-      "Industry":"Industry"
+      "Industry":"Industry",
+      "Contact form":"Contact form",
+      "Revolutionise your business by implementing an 'all-in-one' solution that creates processes and aggregates all the data you use in the business.":"Revolutionise your business by implementing an 'all-in-one' solution that creates processes and aggregates all the data you use in the business.",
+      "Unleash the potential of your business":"Unleash the potential of your business"
+      
       
 
 
