--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -307,7 +307,10 @@
       "Phone":"Telefon",
       "Direct contact":"Bezpośredni kontakt",
       "A tool for your company to work effectively in the field!":"Narzędzie dla Twojej firmy do efektywnej pracy w terenie!",
-      "Industry":"Branża"
+      "Industry":"Branża",
+      "Contact form":"Formularz kontaktowy",
+      "Revolutionise your business by implementing an 'all-in-one' solution that creates processes and aggregates all the data you use in the business.":"Zrewolucjonizuj firmę, wdrażając rozwiązanie 'all-in-one', które stworzy procesy i zagreguje wszystkie dane, które wykorzystujesz w biznesie.",
+      "Unleash the potential of your business":"Uwolnij potencjał swojego biznesu"
 
 
 
