fixed letter problem

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -297,7 +297,7 @@
       "hours":"godziny",
       "Total amount of time for closed positions":"Całkowita suma czasu dla zamkniętych pozycji",
       "Get started today!":"Rozpocznij",
-      "Effectively manage tasks and location":"Efektywne zarządzaj zadaniami i lokalizacją",
+      "Effectively manage tasks and location":"Efektywnie zarządzaj zadaniami i lokalizacją",
       "Save":"Zapisz",
       "Edit":"Edytuj",
       "Inactive":"Nieaktywni",
