--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -321,7 +321,8 @@
         "Absolutely, our solutions are scalable and can be adjusted to meet the growing needs of your business. We offer flexible options to meet both short and long-term business requirements.": "Absolutely, our solutions are scalable and can be adjusted to meet the growing needs of your business. We offer flexible options to meet both short and long-term business requirements.",
         "Yes. We offer a free 30-minute consultation, which allows you to quickly learn the system and configure all the necessary elements.": "Yes. We offer a free 30-minute consultation, which allows you to quickly learn the system and configure all the necessary elements.",
         "The default trial period is 7 days.": "The default trial period is 7 days.",
-        "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud."
+        "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.",
+        "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes"
  
         
 
