--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -321,7 +321,8 @@
           "Absolutely, our solutions are scalable and can be adjusted to meet the growing needs of your business. We offer flexible options to meet both short and long-term business requirements.": "Zdecydowanie, nasze rozwiązania są skalowalne i mogą być dostosowane do rosnących potrzeb Twojego biznesu. Oferujemy elastyczne opcje, aby sprostać zarówno krótko-, jak i długoterminowym wymaganiom biznesowym.",
           "Yes. We offer a free 30-minute consultation, which allows you to quickly learn the system and configure all the necessary elements.": "Tak. Oferujemy darmową 30-minutową konsultację, która pozwala szybko poznać system i skonfigurować wszystkie niezbędne elementy.",
           "The default trial period is 7 days.": "Domyślny okres próbny wynosi 7 dni.",
-          "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "Aplikacja jest zbudowana na React. Dodatkowo wzmocniliśmy naszą aplikację, integrując ją z chmurą Supabase."
+          "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "Aplikacja jest zbudowana na React. Dodatkowo wzmocniliśmy naszą aplikację, integrując ją z chmurą Supabase.",
+          "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"Wyrażasz zgodę na kontakt telefoniczny oraz elektroniczny w celu obsługi niniejszego zgłoszenia. Wyrażasz zgodę na wykorzystanie komunikacji email w celach marketingowych"
 
       
 
