--- a/taskvenue/src/Languages/ua.json
+++ b/taskvenue/src/Languages/ua.json
@@ -322,6 +322,6 @@
         "Absolutely, our solutions are scalable and can be adjusted to meet the growing needs of your business. We offer flexible options to meet both short and long-term business requirements.": "Безумовно, наші рішення є масштабованими та можуть бути налаштовані для задоволення зростаючих потреб вашого бізнесу. Ми пропонуємо гнучкі опції, щоб задовольнити як короткострокові, так і довгострокові бізнес-вимоги.",
         "Yes. We offer a free 30-minute consultation, which allows you to quickly learn the system and configure all the necessary elements.": "Так. Ми пропонуємо безкоштовну 30-хвилинну консультацію, яка дозволяє швидко ознайомитися з системою і налаштувати всі необхідні елементи.",
         "The default trial period is 7 days.": "Стандартний період пробного використання становить 7 днів.",
-        "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "Додаток створено на React. Крім того, ми посилили наш додаток, інтегрувавши його з хмарою Supabase."
-      
+        "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "Додаток створено на React. Крім того, ми посилили наш додаток, інтегрувавши його з хмарою Supabase.",
+        "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"Ви погоджуєтеся на телефонний та електронний контакт для обробки цієї заявки. Ви погоджуєтеся на використання електронної пошти для маркетингових цілей."
 }  
