added venue actin and archived

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -145,7 +145,7 @@
       "Venues details":"Szczegóły miejsca",
       "End Date":"Data do",
       "Start Date":"Data od",
-      "Active":"Aktywny",
+      "Active":"Aktywne",
       "Archived":"Archiwalne",
       "Yes":"Tak",
       "No":"Nie",
