--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -302,7 +302,9 @@
       "Yes. We offer a free 30-minute consultation, which allows you to quickly learn the system and configure all the necessary elements.": "Ja. Wir bieten eine kostenlose 30-minütige Beratung an, die es Ihnen ermöglicht, das System schnell zu erlernen und alle notwendigen Elemente zu konfigurieren.",
       "The default trial period is 7 days.": "Die standardmäßige Testphase beträgt 7 Tage.",
       "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "Die Anwendung basiert auf React. Zusätzlich haben wir unsere Anwendung durch die Integration mit der Supabase-Cloud verstärkt.",
-      "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"Sie stimmen zu, telefonisch und elektronisch kontaktiert zu werden, um diesen Antrag zu bearbeiten. Sie stimmen der Verwendung von E-Mail-Kommunikation zu Marketingzwecken zu."
+      "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"Sie stimmen zu, telefonisch und elektronisch kontaktiert zu werden, um diesen Antrag zu bearbeiten. Sie stimmen der Verwendung von E-Mail-Kommunikation zu Marketingzwecken zu.",
+      "No card required": "Keine Karte erforderlich",
+      "Customer care": "Kundenservice"
     
   
   
