--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -322,7 +322,9 @@
         "Yes. We offer a free 30-minute consultation, which allows you to quickly learn the system and configure all the necessary elements.": "Yes. We offer a free 30-minute consultation, which allows you to quickly learn the system and configure all the necessary elements.",
         "The default trial period is 7 days.": "The default trial period is 7 days.",
         "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.",
-        "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes"
+        "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes",
+        "No card required":"No card required",
+        "Customer care":"Customer care"
  
         
 
