--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -322,7 +322,9 @@
           "Yes. We offer a free 30-minute consultation, which allows you to quickly learn the system and configure all the necessary elements.": "Tak. Oferujemy darmową 30-minutową konsultację, która pozwala szybko poznać system i skonfigurować wszystkie niezbędne elementy.",
           "The default trial period is 7 days.": "Domyślny okres próbny wynosi 7 dni.",
           "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "Aplikacja jest zbudowana na React. Dodatkowo wzmocniliśmy naszą aplikację, integrując ją z chmurą Supabase.",
-          "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"Wyrażasz zgodę na kontakt telefoniczny oraz elektroniczny w celu obsługi niniejszego zgłoszenia. Wyrażasz zgodę na wykorzystanie komunikacji email w celach marketingowych"
+          "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"Wyrażasz zgodę na kontakt telefoniczny oraz elektroniczny w celu obsługi niniejszego zgłoszenia. Wyrażasz zgodę na wykorzystanie komunikacji email w celach marketingowych",
+          "No card required":"Karta nie jest wymagana",
+          "Customer care":"Obsługa klienta"
 
       
 
