added new button and translation

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -324,7 +324,8 @@
           "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "Aplikacja jest zbudowana na React. Dodatkowo wzmocniliśmy naszą aplikację, integrując ją z chmurą Supabase.",
           "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"Wyrażasz zgodę na kontakt telefoniczny oraz elektroniczny w celu obsługi niniejszego zgłoszenia. Wyrażasz zgodę na wykorzystanie komunikacji email w celach marketingowych",
           "No card required":"Karta nie jest wymagana",
-          "Customer care":"Obsługa klienta"
+          "Customer care":"Obsługa klienta",
+          "New task":"Nowe zadanie"
 
       
 
