--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -304,7 +304,8 @@
       "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "Die Anwendung basiert auf React. Zusätzlich haben wir unsere Anwendung durch die Integration mit der Supabase-Cloud verstärkt.",
       "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"Sie stimmen zu, telefonisch und elektronisch kontaktiert zu werden, um diesen Antrag zu bearbeiten. Sie stimmen der Verwendung von E-Mail-Kommunikation zu Marketingzwecken zu.",
       "No card required": "Keine Karte erforderlich",
-      "Customer care": "Kundenservice"
+      "Customer care": "Kundenservice",
+      "New task":"Neue Aufgabe"
     
   
   
