--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -324,7 +324,8 @@
         "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.",
         "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes",
         "No card required":"No card required",
-        "Customer care":"Customer care"
+        "Customer care":"Customer care",
+        "New task":"New task"
  
         
 
