--- a/taskvenue/src/Languages/ua.json
+++ b/taskvenue/src/Languages/ua.json
@@ -325,5 +325,6 @@
         "The application is built on React. Additionally, we have strengthened our application by integrating with the Supabase cloud.": "Додаток створено на React. Крім того, ми посилили наш додаток, інтегрувавши його з хмарою Supabase.",
         "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"Ви погоджуєтеся на телефонний та електронний контакт для обробки цієї заявки. Ви погоджуєтеся на використання електронної пошти для маркетингових цілей.",
         "No card required": "Карта не потрібна",
-        "Customer care": "Обслуговування клієнтів"
+        "Customer care": "Обслуговування клієнтів",
+        "New task":"нове завдання"
 }  
